@startuml

!define TABLE_BORDER_COLOR #AAAAAA
!define TABLE_HEADER_COLOR #CCCCCC
!define TABLE_ROW_COLOR #EEEEEE
!define RELATION_COLOR #999999

!define ENTITY_START_ROW |||
!define ENTITY_END_ROW |||

!define PK_ROW (PK)
!define FK_ROW ~ FK ~
!define FIELD_ROW |

skinparam class {
    BorderColor TABLE_BORDER_COLOR
    HeaderBackgroundColor TABLE_HEADER_COLOR
    BackgroundColor TABLE_ROW_COLOR
}

entity "Account" as account {
    +CustomerID PK_ROW INT
    FirstName FIELD_ROW VARCHAR
    LastName FIELD_ROW VARCHAR
    Address FIELD_ROW VARCHAR
    +City FK_ROW TINYINT
    +Province FK_ROW SMALLINT
    ZipCode FIELD_ROW INT
    EmailAddress FIELD_ROW VARCHAR
    PhoneNumber FIELD_ROW VARCHAR
}

entity "City" as city {
    +CityId PK_ROW INT
    CityName FIELD_ROW VARCHAR
    +CityProvince FK_ROW INT
}

entity "Province" as province {
    +ProvinceId PK_ROW INT
    ProvinceName FIELD_ROW VARCHAR
}

entity "Credential" as credential {
    +CredentialID PK_ROW INT
    +AccountId FK_ROW INT
    PasswordHash FIELD_ROW VARCHAR
    Salt FIELD_ROW VARCHAR
}

account - city
account -- credential
city -- province

@enduml
